--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "build": "zip -r polywrite.zip * -x node_modules/**"
+    "build": "bestzip polywrite.zip '**/*' '!node_modules/**'"
   },
   "devDependencies": {
+    "bestzip": "^2.2.1",
     "jest": "^29.0.0"
   }
 }
